--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+#Firebase
+[Aa]ssets/[Ff]irebase/
+[Aa]ssets/[Ee]ditor Default Resources/
+[Aa]ssets/[Rr]estClient/
